--- a/index.html
+++ b/index.html
@@ -17,25 +17,30 @@
                 <form>
                     <div class="form-group">
                       <label for="exampleInputEmail1">Email</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"  name="email">
                     </div>
                     <div class="form-group">
                       <label for="exampleInputPassword1">Телефон</label>
-                      <input type="phone" class="form-control" id="exampleInputPhone1" placeholder="Телефон">
+                      <input type="phone" class="form-control" id="exampleInputPhone1"  name="phone">
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">ФИО</label>
-                        <input type="text" class="form-control" id="name" placeholder="ФИО">
-                      </div>
+                        <label for="exampleInputPassword1">Имя</label>
+                        <input type="text" class="form-control" id="name" name="firstName">
+                        <label for="exampleInputPassword1">Фамилия</label>
+                        <input type="text" class="form-control" id="name" name="secondName">
+                        <label for="exampleInputPassword1">Отчество</label>
+                        <input type="text" class="form-control" id="name" name="middleName">
+                    </div>
+
                     <div class="form-group">
                         <label for="exampleInputPassword1">Комментарий</label>
-                        <input type="text" class="form-control" id="comment" placeholder="Комментарий">
+                        <input type="text" class="form-control" id="comment"  name="comment">
                     </div>
                     <div class="form-group form-check">
-                      <input type="checkbox" class="form-check-input" id="checkbox">
+                      <input type="checkbox" class="form-check-input" id="checkbox" name="checkbox">
                       <label class="form-check-label" for="exampleCheck1">Cдeлать платеж ежемесячным</label>
                     </div>
-                    <button type="submit" id="paymentButton" class="btn btn-primary btn-lg d-flex justify-content-center">Оплатить</button>
+                    <button type="button" id="paymentButton" class="btn btn-primary btn-lg d-flex justify-content-center">Оплатить</button>
                 </form>
             </main>
         </div>
