--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <script src="https://widget.cloudpayments.ru/bundles/cloudpayments.js"></script>
+    <script
+    src="https://code.jquery.com/jquery-3.6.3.js"
+    integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
+    crossorigin="anonymous">
+    </script>
   </head>
   <body>
     <div id="mainContainer">
